--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.0",
+    "node-sass": "^4.14.1",
+    "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "redux-devtools": "^3.5.0",
-    "websocket-extensions": "^0.1.4"
+    "redux-devtools": "^3.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
